--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,9 +1,10 @@
 <form class="search-form" >
   <mat-form-field class="example-full-width">
     <span matPrefix> </span>
-    <input type="tel" matInput placeholder="Search" [(ngModel)]="search" name="search" (mousedown)="resetEmpty()">
+    <input id="search-bar" type="text" matInput placeholder="Search" [(ngModel)]="search" name="search" (mousedown)="resetEmpty()">
     <button matSuffix mat-button (click)="clickSearch(search)">
-      <mat-icon>search</mat-icon>
+      <span class="glyphicon glyphicon-search"
+            aria-hidden="true"></span>
     </button>
   </mat-form-field>
 </form>
