--- a/src/app/vets/vet-edit/vet-edit.component.html
+++ b/src/app/vets/vet-edit/vet-edit.component.html
@@ -61,23 +61,81 @@
       </div>
       <div>
         <h3>Past Visits</h3>
-      <table>
-        <tr>
-          <td valign="top">
-            <app-visit-list [visits]="oldVisits"></app-visit-list>
-          </td>
-        </tr>
-      </table>
+        <div class="container xd-container">
+          <h2>Visits</h2>
+          <div *ngIf="!pastVisitsData">
+            No results.
+          </div>
+          <div *ngIf="pastVisitsData">
+            <table id="vets" class="table table-striped">
+              <thead>
+              <tr>
+                <th>Date</th>
+                <th>Description</th>
+                <th></th>
+                <th></th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let visit of pastVisitsData">
+                <td>
+                  {{ visit.date }}
+                </td>
+                <td>
+                  {{visit.description}}
+                </td>
+                <td>
+                  <button class="btn btn-default" (click)="onSelect(visit)">Edit Visit</button>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+            <mat-paginator #paginatorPast [length]="pastLength"
+                           [pageSize]="pageSize" (page)="onChangePagePast($event)">
+
+            </mat-paginator>
+          </div>
+        </div>
       </div>
       <div>
         <h3>Future Visits</h3>
-      <table>
-        <tr>
-          <td>
-            <app-visit-list [visits]="futureVisits"></app-visit-list>
-          </td>
-        </tr>
-      </table>
+        <div class="container xd-container">
+          <h2>Visits</h2>
+          <div *ngIf="!futureVisitsData">
+            No results.
+          </div>
+          <div *ngIf="futureVisitsData">
+            <table class="table table-striped">
+              <thead>
+              <tr>
+                <th>Date</th>
+                <th>Description</th>
+                <th></th>
+                <th></th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let visit of futureVisitsData">
+                <td>
+                  {{ visit.date }}
+                </td>
+                <td>
+                  {{visit.description}}
+                </td>
+                <td>
+                  <button class="btn btn-default" (click)="onSelect(visit)">Edit Visit</button>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+            <mat-paginator #paginatorFuture [length]="futureLength"
+                           [pageSize]="pageSize" (page)="onChangePageFuture($event)">
+
+            </mat-paginator>
+          </div>
+        </div>
+      </div>
+      <div>
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
