--- a/src/app/pets/pet-edit/pet-edit.component.html
+++ b/src/app/pets/pet-edit/pet-edit.component.html
@@ -81,7 +81,8 @@
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <br/>
-          <button class="btn btn-default" type="button" (click)="gotoOwnerDetail(pet.owner)">< Back</button>
+          <button class="btn btn-default" type="button" (click)="goBack()">< Back</button>
+          <button class="btn btn-default" type="button" (click)="gotoOwnerDetail(pet.owner)">go to Owner Detail</button>
           <button class="btn btn-default" type="submit">Update Pet</button>
         </div>
       </div>
