--- a/src/app/search/pet-search/pet-search.component.html
+++ b/src/app/search/pet-search/pet-search.component.html
@@ -37,7 +37,7 @@
           <td (click)="onSelect(pet.id)"><a routerLink="/pets/{{pet.id}}/edit" routerLinkActive="active">{{ pet.name }}</a></td>
           <td>{{ pet.type.name }}</td>
           <td>{{ pet.birthDate }}</td>
-          <td (click)="goToOwner(pet.ownerId)"><a routerLinkActive="active" routerLink="/owners/{{pet.ownerId}}">{{pet.owner.firstName}} {{pet.owner.lastName}}</a></td>
+          <td (click)="goToOwner(pet.ownerId)"><a routerLinkActive="active" routerLink="/owners/{{pet.ownerId}}">{{pet.owner?.firstName}} {{pet.owner?.lastName}}</a></td>
         </tbody>
       </table>
       <mat-paginator #paginator [length]="length"
