fixed initial result table size

--- a/src/app/search/vet-search/vet-search.component.html
+++ b/src/app/search/vet-search/vet-search.component.html
@@ -33,7 +33,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let vet of vets">
+      <tr *ngFor="let vet of dataSource">
         <td>
           {{ vet.firstName }} {{ vet.lastName }}
         </td>
