--- a/src/app/parts/welcome/welcome.component.html
+++ b/src/app/parts/welcome/welcome.component.html
@@ -24,7 +24,8 @@
     <h2>Welcome</h2>
     <div class="row">
       <div class="col-md-12">
-        <img class="img-responsive" src="./assets/images/pets.png" alt="pets logo"/>
+        <img width="300" height="250" class="img-responsive" src="./assets/images/replacement.jpg" alt="pets logo"/>
       </div>
     </div>
   </div>
+</div>
